--- a/WeatherProject/index.html
+++ b/WeatherProject/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Reports</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Weather in ...</title>
 </head>
 <body>
-    <h1>Subscirbe to daily weather reports for your city</h1>
-    <form method="post">
+    <form action="/" method="post">
         <input type="text" name="city" placeholder="City">
-        <input type="text" name="email" placeholder="Email">
-        <button type="submit">Subscribe</button>
+        <input type="submit" value="Search">
     </form>
 </body>
 </html>
